--- a/pitchTest/index.html
+++ b/pitchTest/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-      <script src="node_modules/d3/dist/d3.min.js"></script>
+      <script src="d3.min.js"></script>
     </head>
 
     <body>
@@ -116,7 +116,7 @@
 
               })
               .on('mouseout',function() {
-                errorLayer.selectAll("circle").remove();                
+                errorLayer.selectAll("circle").remove();
                 d3.select("#tooltip").style("display","none");
                 d3.select(this).attr("stroke","none");
               });
