Relative Paths for JS & CSS

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Tim Marco - Creative Technologist</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="app/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700|Merriweather:400,600" />
-    <script src="app.js"></script>
+    <script src="app/app.js"></script>
   </head>
   <body>
     <div id="navbar">
