--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
 
       <div id="back-button">
-        &larr; Go Back
+        <span id="back-button-span">&larr; back to home</span>
       </div>
 
 
