--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="app/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700|Merriweather:400,600" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <script src="app/app.js"></script>
+    <script src="app/app-min.js"></script>
   </head>
   <body>
     <div id="navbar">
