--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tim Marco - Creative Technologist</title>
     <link rel="stylesheet" href="app/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700|Merriweather:400,600" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico?v=0.1" type="image/x-icon" />
     <script src="app/app-min.js"></script>
   </head>
   <body>
