--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Last Updated 4/13/2021 -->
 <html>
   <head>
-    <title>Tim Marco - Creative Technologist</title>
+    <title>Tim Marco</title>
     <link rel="stylesheet" href="app/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700|Merriweather:400,600" />
     <link rel="icon" href="favicon.ico?v=0.1" type="image/x-icon" />
