--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div id="back-button">
-        <span id="back-button-span">&larr; back to home</span>
+        <span id="back-button-span">&larr; go back</span>
       </div>
 
 
